# source-to-skill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  audio.md  case-studies.md  commands.md  demo.md  evaluation.md  intake.md  output-levels.md  philosophy.md  review-gates.md  scoring.md  splitting.md  transcripts.md
docs/superpowers/plans/: 2026-07-02-source-to-skill-v0.md
examples/: README.md  article.html  meeting-transcript.md  meeting-transcript.vtt  readiness-report.md
source_to_skill/: __init__.py  analyzer.py  audio.py  builder.py  cli.py  demo.py  evaluator.py  evolution.py  intake.py  models.py  scoring.py  segmenter.py  templates.py  transcript.py
source_to_skill/examples/: article.md
source_to_skill/examples/existing-skill/review-playbook-skill/: SKILL.md
source_to_skill/examples/existing-skill/review-playbook-skill/references/: evidence.md
tests/: test_audio.py  test_builder.py  test_cli.py  test_demo.py  test_evaluator.py  test_evolution.py  test_intake.py  test_scoring.py  test_segmenter.py  test_templates.py  test_transcript.py  test_url_intake.py
