[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "source-to-skill"
version = "0.1.1"
description = "Analyze source material and compile only reusable knowledge into agent skills."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Source-to-Skill contributors" }]
keywords = ["agent-skills", "knowledge-management", "cli", "ai-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/GeoLab-org/source-to-skill"
Issues = "https://github.com/GeoLab-org/source-to-skill/issues"

[project.scripts]
source-to-skill = "source_to_skill.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["source_to_skill"]

[tool.hatch.build.targets.wheel.force-include]
"source_to_skill/examples/article.md" = "source_to_skill/examples/article.md"
"source_to_skill/examples/meeting-transcript.vtt" = "source_to_skill/examples/meeting-transcript.vtt"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F"]
